--- a/.gitignore
+++ b/.gitignore
@@ -105,7 +105,7 @@ typings/
 
 # Nuxt.js build / generate output
 .nuxt
-dist
+#dist
 
 # Gatsby files
 .cache/
@@ -127,7 +127,6 @@ dist
 
 # TernJS port file
 .tern-port
-
 
 #Jet brain
 .idea/
