--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "deploy" : "git push origin main:deploy"
+    "deploy" : "git push origin deploy",
+    "split" : "git subtree split --branch deploy --prefix dist/"
   },
   "dependencies": {
     "react": "^18.2.0",
